# riskflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: benchmark-matrix.yml  ci.yml  governance.yml  release-evidence.yml
docs/: architecture.md  benchmark_matrix.md  benchmarks.md  constants.md  end_to_end_code_flow.md  getting_started.md  hardening.md  model_validation.md  observability.md  operations.md  release_governance.md  schemas.md  security_review.md  validation.md
docs/crates/: risk-bench.md  risk-core.md  risk-portfolio.md  risk-pretrade.md
risk-bench/: Cargo.toml  README.md
risk-bench/benches/: evaluate.rs
risk-bench/examples/: benchmark_fixture.rs
risk-bench/src/: main.rs
risk-core/: Cargo.toml  README.md
risk-core/examples/: reference_data_flow.rs
risk-core/src/: currency.rs  instrument.rs  lib.rs  market.rs  position.rs  schema.rs  symbol.rs  types.rs  verdict.rs
risk-core/tests/: numeric_properties.rs
risk-portfolio/: Cargo.toml  README.md
risk-portfolio/examples/: portfolio_report.rs
risk-portfolio/src/: covariance.rs  greeks.rs  lib.rs  netting.rs  performance.rs  python.rs  scenario.rs  var.rs
risk-portfolio/tests/: golden_stress.rs  golden_var.rs
risk-portfolio/tests/fixtures/: historical_var.csv  stress_scenarios.csv
risk-pretrade/: Cargo.toml  README.md
risk-pretrade/examples/: end_to_end_adapter.rs
risk-pretrade/src/: audit.rs  gate.rs  lib.rs  limit_source.rs  observability.rs
risk-pretrade/src/checks/: aggregate_notional.rs  fat_finger.rs  margin.rs  mod.rs  notional.rs  position_limit.rs
risk-pretrade/tests/: adapter_contracts.rs  adversarial_pretrade.rs  golden_pretrade.rs
risk-pretrade/tests/fixtures/: pretrade_orders.csv
scripts/: check_governance.sh  release_evidence.sh
