[workspace]
members = [
    "risk-core",
    "risk-pretrade",
    "risk-portfolio",
    "risk-bench",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gregorian-09/riskflow"
keywords = ["risk", "trading", "portfolio", "pretrade", "quant"]
categories = ["finance", "mathematics"]

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
