[package]
name = "risk-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Benchmark harnesses for the Riskflow workspace."
publish = false

[dependencies]
risk-core = { version = "0.1.0", path = "../risk-core" }
risk-pretrade = { version = "0.1.0", path = "../risk-pretrade" }

[lints]
workspace = true

[[bench]]
name = "evaluate"
harness = false

[dev-dependencies]
criterion = "0.5.1"
