[package]
name = "risk-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared fixed-point risk types, instruments, positions, and market snapshots."

[dependencies]
of_core = { version = "0.4.0", default-features = false }

[lints]
workspace = true

[dev-dependencies]
proptest = "1.11.0"
