[package]
name = "risk-portfolio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description = "Offline portfolio risk analytics built on risk-core types."

[dependencies]
risk-core = { path = "../risk-core" }

[lints]
workspace = true
