[package]
name = "risk-portfolio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Offline portfolio risk analytics built on risk-core types."

[dependencies]
nalgebra = "0.33.3"
pyo3 = { version = "0.29.0", features = ["macros"], optional = true }
risk-core = { version = "0.1.0", path = "../risk-core" }

[lints]
workspace = true

[features]
python = ["dep:pyo3"]
