[package]
name = "risk-pretrade"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description = "Synchronous pretrade risk gate built on risk-core types."

[dependencies]
arc-swap = "1.7.1"
risk-core = { path = "../risk-core" }

[lints]
workspace = true
